fix: Fix footer wrap and style better

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,10 +440,11 @@ header {
 .footer_inner-container {
     max-width: 800px;
     margin: auto;
+    flex-wrap: inherit;
 }
 
 .page-footer .footer_column {
-    padding: 0.6rem;
+    padding: 0.8rem;
 }
 
 .page-footer p:last-of-type {
@@ -456,13 +457,18 @@ header {
 
 @media screen and (min-width:576px) {
     .page-footer {
-        font-size: 0.9rem;
+        font-size: 1rem;
+    }
+
+    .footer_inner-container {
+        flex-wrap: nowrap;
     }
 }
 
 .page-footer h5 {
     /* Based on what .page-footer font-size is set to */
     font-size: 1.2em;
+    font-weight: 600;
 }
 
 .page-footer p {
